--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -2111,8 +2111,9 @@ _paling satu</string>
     <string name="coinding">Depositing</string>
     <string name="withdrawding">Withdrawal</string>
     <string name="over">Completed</string>
+    <string name="verify_code_resend">重新发送</string>
 
-<!--    <string name="wallet">Wallet</string>-->
+    <!--    <string name="wallet">Wallet</string>-->
 <!--    <string name="asdt">我的总资产(ASDT)</string>-->
 <!--    <string name="select_currency">请选择币种</string>-->
 <!--    <string name="z_tv_copy_success">复制成功</string>-->
