--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2361,4 +2361,5 @@
     <string name="coinding">充币中</string>
     <string name="withdrawding">提币中</string>
     <string name="over">已完成</string>
+    <string name="verify_code_resend">重新发送</string>
 </resources>
