--- a/app/src/main/res/values-tl/strings.xml
+++ b/app/src/main/res/values-tl/strings.xml
@@ -2088,5 +2088,6 @@ Ang kasalukuyang katayuan ay sumunog pagkatapos basahin, at ang iba pang partido
     <string name="coinding">Depositing</string>
     <string name="withdrawding">Withdrawal</string>
     <string name="over">Completed</string>
+    <string name="verify_code_resend">重新发送</string>
 </resources>
 
