--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -2062,7 +2062,7 @@ _paling satu</string>
     <string name="msg_emot">[表情]</string>
 
     <string name="wallet">Wallet</string>
-    <string name="asdt">My total assets(ASDT)</string>
+    <string name="asdt">ASDT\nMy total assets</string>
     <string name="select_currency">Please select currency</string>
     <string name="z_tv_copy_success">Copy successfully</string>
     <string name="tv_save">Picture has been saved to album</string>
@@ -2115,58 +2115,12 @@ _paling satu</string>
     <string name="search_txt">Search</string>
     <string name="dapps">My DApps</string>
     <string name="dapps_hot">Hot Dapps</string>
-    <string name="new_string">新品</string>
+    <string name="new_string">New</string>
     <string name="new_version">New version found</string>
-    <string name="my_code">我的二维码</string>
-    <string name="read_bg">红包</string>
-    <!--    <string name="wallet">Wallet</string>-->
-<!--    <string name="asdt">我的总资产(ASDT)</string>-->
-<!--    <string name="select_currency">请选择币种</string>-->
-<!--    <string name="z_tv_copy_success">复制成功</string>-->
-<!--    <string name="tv_save">图片已保存至相册</string>-->
-<!--    <string name="coin">充币</string>-->
-<!--    <string name="tv_withdraw">提币</string>-->
-<!--    <string name="tv_withdraw_tip_1">1.您的提币操作一旦完成，对应的资产所有权将由您变更为目标地址对应的账户所有人享有</string>-->
-<!--    <string name="tv_withdraw_tip_2">2.请您务必在提币操作前，仔细核对提币地址信息，确保提币属于自愿行为，并确认不涉及任何传销，非法集资，诈骗等违法情形，谨防上当受骗，避免造成不必要的财产损失.</string>-->
-<!--    <string name="tv_withdraw_tip_3">3.最小提币数量：1 USDT</string>-->
-<!--    <string name="tv_withdraw_tip_4">4.请务必确认电脑浏览器安全，防止信息被篡改或泄露</string>-->
-<!--    <string name="hint_copy_text">请输入或长按粘贴地址</string>-->
-<!--    <string name="tv_withdraw_fee">提币手续费:2%</string>-->
-<!--    <string name="tv_withdraw_available">可用: 0 USDT</string>-->
-<!--    <string name="tv_withdraw_number">最低提现数量 1 USDT</string>-->
-<!--    <string name="tv_all">全部</string>-->
-<!--    <string name="tv_withdraw_number_text">提币数量</string>-->
-<!--    <string name="tv_withdraw_address_text">提币地址</string>-->
-<!--    <string name="tv_withdraw_tip_text">温馨提示</string>-->
-<!--    <string name="capture_dark_tip">\\n环境过暗，请打开闪光灯</string>-->
-<!--    <string name="open_camera_error">打开相机出错</string>-->
-<!--    <string name="capture_tip">将二维码/条码放入框内，即可自动扫描</string>-->
-<!--    <string name="str_open_light">闪光灯</string>-->
-<!--    <string name="tv_phone">手机验证</string>-->
-<!--    <string name="tv_email">邮箱验证</string>-->
-<!--    <string name="tv_email_phone_text">您绑定了手机号和邮箱，请任选一个接收安全验证码</string>-->
-<!--    <string name="verify_text">安全验证</string>-->
-<!--    <string name="tv_tip_1">若未收到邮件，请检查邮件垃圾箱</string>-->
-<!--    <string name="tv_pwd_text_1">请输入交易密码</string>-->
-<!--    <string name="tv_input_text_1">请输入邮箱验证码</string>-->
-<!--    <string name="tv_input_text_2">请输入手机验证码</string>-->
-<!--    <string name="wallet_record">充提记录</string>-->
-<!--    <string name="state">状态</string>-->
-<!--    <string name="coin_address">充币地址</string>-->
-<!--    <string name="wallet_address">钱包地址</string>-->
-<!--    <string name="hash">交易哈希</string>-->
-<!--    <string name="fee">手续费</string>-->
-<!--    <string name="arrive">实际到账</string>-->
-<!--    <string name="review_time">审核时间</string>-->
-<!--    <string name="review">审核意见</string>-->
-<!--    <string name="trade_time">交易时间</string>-->
-<!--    <string name="usdt">USDT充币地址</string>-->
-<!--    <string name="_1_usdt">1.请勿像上述地址充值任何非USDT资产，否则资产将不可退回.</string>-->
-<!--    <string name="_2">2.请选择对应的链进行充值.</string>-->
-<!--    <string name="_3_100_usdt">3.最小充值数量:100 USDT,小于最小数量的充值将不会上账且无法退回.</string>-->
-<!--    <string name="tip_text_1">保存二维码至相册</string>-->
-<!--    <string name="copy_address">复制充币地址</string>-->
-<!--    <string name="coinding">充币中</string>-->
-<!--    <string name="withdrawding">提币中</string>-->
-<!--    <string name="over">已完成</string>-->
+    <string name="my_code">My QR code</string>
+    <string name="read_bg">Red envelope</string>
+    <string name="string_1">Asset details</string>
+    <string name="string_2">Transaction details</string>
+    <string name="string_3">Friends</string>
+    <string name="string_4">Account and security</string>
 </resources>
