--- a/app/src/main/res/values-tl/strings.xml
+++ b/app/src/main/res/values-tl/strings.xml
@@ -2039,7 +2039,7 @@ Ang kasalukuyang katayuan ay sumunog pagkatapos basahin, at ang iba pang partido
     <string name="msg_emot">[表情]</string>
 
     <string name="wallet">Wallet</string>
-    <string name="asdt">My total assets(ASDT)</string>
+    <string name="asdt">ASDT\nMy total assets</string>
     <string name="select_currency">Please select currency</string>
     <string name="z_tv_copy_success">Copy successfully</string>
     <string name="tv_save">Picture has been saved to album</string>
@@ -2092,9 +2092,13 @@ Ang kasalukuyang katayuan ay sumunog pagkatapos basahin, at ang iba pang partido
     <string name="search_txt">Search</string>
     <string name="dapps">My DApps</string>
     <string name="dapps_hot">Hot Dapps</string>
-    <string name="new_string">新品</string>
+    <string name="new_string">New</string>
     <string name="new_version">New version found</string>
-    <string name="my_code">我的二维码</string>
-    <string name="read_bg">红包</string>
+    <string name="my_code">My QR code</string>
+    <string name="read_bg">Red envelope</string>
+    <string name="string_1">Asset details</string>
+    <string name="string_2">Transaction details</string>
+    <string name="string_3">Friends</string>
+    <string name="string_4">Account and security</string>
 </resources>
 
