--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -2253,7 +2253,7 @@
     <string name="msg_emot">[表情]</string>
 
     <string name="wallet">錢包</string>
-    <string name="asdt">我的總資產(ASDT)</string>
+    <string name="asdt">ASDT\n我的總資產</string>
     <string name="select_currency">請選擇幣種</string>
     <string name="z_tv_copy_success">複製成功</string>
     <string name="tv_save">圖片已保存至相冊</string>
@@ -2308,6 +2308,10 @@
     <string name="dapps_hot">熱門Dapps</string>
     <string name="new_string">新品</string>
     <string name="new_version">發現新版本</string>
-    <string name="my_code">我的二维码</string>
-    <string name="read_bg">红包</string>
+    <string name="my_code">我的二維碼</string>
+    <string name="read_bg">紅包</string>
+    <string name="string_1">資產詳情</string>
+    <string name="string_2">交易明細</string>
+    <string name="string_3">朋友圈</string>
+    <string name="string_4">賬號與安全</string>
 </resources>
