--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2390,7 +2390,7 @@
     <string name="please_input_capital_password_hint">请输入资金密码</string>
     <string name="please_confirm_capital_password_hint">请确认资金密码</string>
     <string name="example_red_packet_remain">红包已领取%s/%s,共%s/%s</string>
-    <string name="example_red_packet_loot_all">%s个红包,%s秒被抢光</string>
+    <string name="example_red_packet_loot_all">%s个红包,%s被抢光</string>
     <string name="red_back_expires">红包已过期</string>
     <string name="send_red_people">发出红包者</string>
     <string name="look_get_detail">查看领取详情</string>
