1.本地数据缓存 2.账号显示优化

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2100,6 +2100,7 @@
     <string name="skin_Chen_wen_Hui">沉稳灰</string>
     <string name="select_skin">来挑选符合你眼缘的颜色吧</string>
     <string name="my_phone_number">我的手机号</string>
+    <string name="login_account">当前账号</string>
     <string name="label_communication">通讯号</string>
     <string name="label_avatar">头像</string>
     <string name="update">更新</string>
